<resources>
    <string name="app_name">Boggle</string>
    <string name="word">Word:\"%1$s\"</string>
    <string name="score">Score: %1$d\n</string>
    <string name="invalid_word">%1$s is not a valid word</string>
    <string name="word_valid" />
    <string name="word_invalid">\'%s\' is an invalid word</string>
    <string name="word_already_found">\'%s\' was already found</string>
    <string name="word_too_short"><![CDATA[\'%s\' is too short (<3)]]></string>
    <string name="word_null" />
    <string name="boggle">Boggle!</string>
    <string name="submit">Submit</string>
    <string name="single_player_button">Single Player</string>
    <string name="boggle_welcome_message">Welcome to Boggle!</string>
    <string name="multiplayer_button">Multiplayer</string>
    <string name="friends_list_button">Friends List</string>
    <string name="leaderboards_button">Leaderboards</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_display_name">Display Name</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="open_nav">open hamburger menu</string>
    <string name="close_nav">close hamburger menu</string>
    <string name="join_room">Join Room</string>
    <string name="enter_room_code">Enter Room Code</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="hint_click_on_the_words_for_solution"><small><small>hint: click on the words for solution</small></small></string>
</resources>